@startuml


class User {
    id (PK): Integer
    name: String
    firstname: String
    email: String
    password: String
}

class Exercise {
    id (PK): Integer
    exercise-type: String
    difficulty: Integer
    instructions: String
}

class Realize {
    user_id (FK): Integer
    exercise_id (FK): Integer
}

class Progression {
    id (PK): Integer
    user_id (FK): Integer
    score: Integer
    level: Integer
    date: Date
}

User "1" -- "N" Realize : realize
Realize "N" -- "1" Exercise : affected
User "1" -- "1" Progression : a

@enduml